@@ -1,6 +1,8 @@
 0.5.11
  - enh: drag&drop files to manual upload dialog (#23)
  - enh: set upload rate refresh interval to >3s (#22)
+ - enh: permit to only update resource schema supplements when
+   executing `dataset.add_resource` with `exist_ok=True`
 0.5.10
  - fix: removed confusing wait-cursor during circle selection
  - fix: manual upload dialog was shown even though user pressed
